--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>helloo netlify this is my code</h1>
     <h2>this is my code</h2>
+    <h2>i am loving the weather</h2>
 </body>
 </html>
