--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>helloo netlify this is my code</h1>
     <h2>this is my code</h2>
     <h2>i am loving the weather</h2>
+    <h2>it is my day</h2>
 </body>
 </html>
